@@ -1,7 +1,8 @@
 <!doctype html>
 {% load static i18n %}
 {% get_current_language as LANGUAGE_CODE %}
-<html class="no-js" lang="{{ LANGUAGE_CODE }}">
+{% get_current_language_bidi as LANGUAGE_BIDI %}
+<html class="no-js" lang="{{ LANGUAGE_CODE }}" dir="{% if LANGUAGE_BIDI %}rtl{% else %}ltr{% endif %}">
 <head>
     <meta charset="utf-8" />
     <title>Wagtail - {% block titletag %}{% endblock %}</title>
